<?xml version="1.0"?>
<package format="2">
  <name>PositionBasedDynamics</name>
  <version>0.1.0</version>
  <description>This package contains a basic PBD simulator modified from https://github.com/InteractiveComputerGraphics/PositionBasedDynamics.</description>

  <maintainer email="taoyao@usc.edu">Tao Yao</maintainer>
  <license>MIT</license>
  <author>Tao Yao</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
